<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_app.permission.PermissionActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_bg_app"/>

    <!-- layoutActionBar -->
    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <!-- imgPermission -->
    <ImageView
        android:id="@+id/imgPermission"
        android:layout_width="256dp"
        android:layout_height="254dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutActionBar" />

    <!-- txtPermission -->
    <LinearLayout
        android:id="@+id/txtPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="17dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/imgPermission"
        app:layout_constraintStart_toStartOf="@id/imgPermission"
        app:layout_constraintBottom_toBottomOf="@id/imgPermission">

        <TextView
            android:id="@+id/txtPer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:maxLines="2"
            android:ellipsize="end"/>
    </LinearLayout>

    <!-- tvContinue -->
    <TextView
        android:id="@+id/tvContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:fontFamily="@font/londrina_solid_regular"
        android:gravity="center"
        android:textColor="@color/purple"
        android:text="@string/continue_per"
        android:textSize="16sp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />
    <!-- scvButton -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/tvContinue"
        app:layout_constraintTop_toBottomOf="@id/imgPermission">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <!-- btnStorage-->
            <RelativeLayout
                android:id="@+id/btnStorage"
                android:background="@drawable/bg_permission"
                android:layout_width="match_parent"

                android:layout_height="56dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/londrina_solid_regular"
                    android:gravity="start"
                    android:text="@string/storage"
                    android:textColor="@color/purple"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/swPermission"
                    android:layout_width="56dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_sw_off" />
            </RelativeLayout>

            <!-- btnNotification-->
            <RelativeLayout
                android:id="@+id/btnNotification"
                android:layout_width="match_parent"
                android:background="@drawable/bg_permission"
                android:layout_height="56dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/londrina_solid_regular"
                    android:gravity="start"
                    android:text="@string/notification"
                    android:textColor="@color/purple"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/swNotification"
                    android:layout_width="56dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_sw_off" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>