<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.charactor.avatar.maker.pfp.activity_app.SettingsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_bg_app"/>

    <!-- layoutActionBar -->
    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--            btnLang-->
            <LinearLayout
                android:id="@+id/btnLang"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_100_stroke_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginVertical="17dp"
                        android:src="@drawable/ic_lang_set" />
                </FrameLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="8"
                    android:fontFamily="@font/creepstercaps_regular"
                    android:gravity="center_vertical"
                    android:text="@string/language"
                    android:textColor="@color/purple"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:visibility="invisible"
                        android:layout_gravity="start|center_vertical"
                        android:src="@drawable/ic_more_set" />
                </FrameLayout>

            </LinearLayout>

            <!--            btnLang-->
            <LinearLayout
                android:id="@+id/btnRate"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_100_stroke_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginVertical="17dp"
                        android:src="@drawable/ic_rate_set" />
                </FrameLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="8"
                    android:fontFamily="@font/creepstercaps_regular"
                    android:gravity="center_vertical"
                    android:text="@string/rate_us"
                    android:textColor="@color/purple"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:visibility="invisible"

                        android:layout_gravity="start|center_vertical"
                        android:src="@drawable/ic_more_set" />
                </FrameLayout>
            </LinearLayout>

            <!--            btnShare-->
            <LinearLayout
                android:id="@+id/btnShare"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_100_stroke_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginVertical="17dp"
                        android:src="@drawable/ic_share_set" />
                </FrameLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="8"
                    android:fontFamily="@font/creepstercaps_regular"
                    android:gravity="center_vertical"
                    android:text="@string/share_app"
                    android:textColor="@color/purple"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="24dp"
                        android:visibility="invisible"

                        android:layout_height="24dp"
                        android:layout_gravity="start|center_vertical"
                        android:src="@drawable/ic_more_set" />
                </FrameLayout>
            </LinearLayout>

            <!--            btnPolicy-->
            <LinearLayout
                android:id="@+id/btnPolicy"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_100_stroke_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginVertical="17dp"
                        android:src="@drawable/ic_policy_set" />
                </FrameLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="8"
                    android:fontFamily="@font/creepstercaps_regular"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/purple"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:visibility="invisible"

                        android:layout_gravity="start|center_vertical"
                        android:src="@drawable/ic_more_set" />
                </FrameLayout>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <!--    &lt;!&ndash;    flBanner&ndash;&gt;-->
    <!--    <FrameLayout-->
    <!--        android:id="@+id/flBanner"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent">-->

    <!--        <include-->
    <!--            android:id="@+id/includeBanner"-->
    <!--            layout="@layout/layout_banner" />-->
    <!--    </FrameLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>